# django-stocks

./: .gitignore  LICENSE  README.md  pyproject.toml  runtests.py
stocks/: admin.py  apps.py  constants.py
stocks/models/: __init__.py  article.py  depot.py  inventaire.py  journal.py  lot.py  mouvement.py  nomenclature.py  source.py  valorisation.py
stocks/services/: __init__.py  article_service.py  inventaire_service.py  mouvement_service.py  valorisation_service.py
stocks/valorisation/: __init__.py  base.py  fifo.py  pmp.py  registry.py  standard.py
tests/: settings.py  test_inventaire.py  test_models.py  test_services.py  test_valorisation.py
